--- a/index.html
+++ b/index.html
@@ -3,15 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Scrolling Website</title>
+    <title>Project We the People</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
         <div class="content">
-            <h1>Welcome to the Project We The People</h1>
-            <p>This website dynamically adjusts for laptops and mobile phones.</p>
-            <p>Scroll down to see more information...</p>
+            <h1>Welcome to Project We The People</h1>
             <!-- Add more content as needed -->
         </div>
     </div>
